Remove twitter. Add description:

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ layout: default
         {% if site.email %}
           <li class="email"><a href="mailto:{{site.email}}"><i class="fa fa-envelope-o"></i> {{site.email}}</a></li>
         {% else %}
-          <li class="email"><a href="mailto:sheludkoartem@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> sheludkoartem@gmail.com</a></li>
+          <li class="email"><a href="mailto:doug@dougtabuchi.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> doug@dougtabuchi.com</a></li>
         {% endif %}
 
         {% if site.linkedin %}
@@ -32,13 +32,12 @@ layout: default
         {% if site.github %}
           <li class="github"><a href="http://github.com/{{site.github}}" target="_blank"><i class="fa fa-github"></i> github.com/{{site.github}}</a></li>
         {% else %}
-          <li class="github"><a href="http://github.com/artemsheludko" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> github.com/artemsheludko</a></li>
+          <li class="github"><a href="http://github.com/tabuchid" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> github.com/tabuchid</a></li>
         {% endif %}
 
         {% if site.twitter %}
           <li class="twitter"><a href="https://twitter.com/{{site.twitter}}" target="_blank"><i class="fa fa-twitter"></i> {{site.twitter}}</a></li>
         {% else %}
-          <li class="twitter"><a href="https://twitter.com/artemsheludko_" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> @artemsheludko_</a></li>
         {% endif %}
 
       </ul>
