--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,13 +4,13 @@ layout: default
 
 <div class="home">
   <div class="page-heading">
-    <h2 class="page-title">About me</h2>
+    <h2 class="page-title">Hello Friend!</h2>
   </div>
   <div class="about">
     <div class="container-face">
       <img class="face" src="{{site.baseurl}}/assets/img/{% if site.pic %}{{ site.pic }}{% else %}github.jpg{% endif %}" alt="">
     </div>
-    <h2 class="tagline">{% if site.tagline %}{{site.tagline}}{% else %}Full Stack Developer{% endif %}</h2>
+    <h2 class="tagline">{% if site.tagline %}{{site.tagline}}{% else %}{% endif %}</h2>
     <div class="about-description">
       <p>{% if site.about-description %}{{site.about-description}}{% else %}Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure culpa velit, obcaecati veniam quas, sed labore quo illo ipsam officiis, cum debitis aliquid dolorum autem quam. Officia voluptate, cupiditate illum?{% endif %}</p>
     </div>
