--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
   <div class="page-heading">
-    <h2 class="page-title">Hello Friend!</h2>
+    <h2 class="page-title">Hi! I'm Doug.</h2>
   </div>
   <div class="about">
     <div class="container-face">
