--- a/assets/stylesheets/modules/_home.scss
+++ b/assets/stylesheets/modules/_home.scss
@@ -12,7 +12,7 @@
 
   .page-title {
     font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
+    text-transform: none;
     font-size: 5rem;
     line-height: 1.1;
     text-align: center;
