--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   </h1>
   <nav class="main-menu">
     <ul>
-      <li><a href="{{site.baseurl}}/blog/">Blog</a></li>
+      <li><a href="{{site.baseurl}}/til/">TIL</a></li>
     </ul>
   </nav>
 </header>
